# auto-analyser

./: .dockerignore  .env  .env.example  .gitignore  CONTINUOUS_ANALYSIS_SUMMARY.md  Cargo.toml  Dockerfile  ENHANCED_FEATURES.md  FILTERING_GUIDE.md  FINAL_IMPLEMENTATION_SUMMARY.md  FRONTEND_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  PRIORITY_SYSTEM.md  README.md  REALTIME_UPDATES_SUMMARY.md  STOCK_DATABASE_IMPLEMENTATION.md  STOCK_FILTERING_IMPLEMENTATION.md  demo.sh  deploy.sh  docker-compose.yml  nginx.conf  run.sh  setup.sh  setup_complete.sh  setup_priority_system.sh  setup_stocks.sh  sqlx-data.json  start-app.sh  start-dev.sh  stop-app.sh  test-integration.sh  test_connection.rs  test_stocks.sh
auto-front/: .prettierrc.json  README.md  package.json
auto-front/src/: App.tsx  provider.tsx
auto-front/src/components/: AlertsManager.tsx  Dashboard.tsx  StockQuote.tsx  Watchlist.tsx
auto-front/src/components/auth/: AuthPage.tsx  LoginForm.tsx  RegisterForm.tsx
auto-front/src/contexts/: AuthContext.tsx
auto-front/src/services/: api.ts
examples/: README_yahoo_rate_limit_test.md  basic_analysis.rs  complete_analysis.rs  custom_filters.rs  debug_tickers.rs  filter_examples.rs  rsi_test_tradingview.rs  simple_analysis.rs  ticker_collection.rs  yahoo_api_aggressive_test.rs  yahoo_api_rate_limit_test.rs  yahoo_api_timing_test.rs
frontend/: README.md  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  index.css  index.js
frontend/src/components/: AnalysisResults.js  DashboardStats.js  FilterPanel.js  SystemStats.js
frontend/src/hooks/: useQueries.js
frontend/src/providers/: QueryProvider.js
frontend/src/services/: api.js
heroui-front/: README.md  package.json
heroui-front/src/components/: AnalysisResults.tsx  DashboardStats.tsx  FilterPanel.tsx  navbar.tsx
heroui-front/src/config/: site.ts
heroui-front/src/layouts/: default.tsx
heroui-front/src/pages/: index.tsx
heroui-front/src/services/: api.ts
heroui-front/src/styles/: globals.css
heroui-front/src/utils/: formatters.ts
migrations/: 001_initial.sql  002_add_stocks_table.sql  003_add_delisting_tracking.sql  004_add_stock_priority.sql  20241226000001_initial.sql
src/: analyzer.rs  api.rs  cache.rs  config.rs  database.rs  database_new.rs  database_old.rs  lib.rs  main.rs  models.rs  server.rs  simple_test.rs  web_api.rs
src/handlers/: alerts.rs  auth.rs  market_data.rs  mod.rs  priority.rs  stocks.rs  watchlist.rs
src/indicators/: README.md  advanced.rs  bollinger_bands.rs  macd.rs  mod.rs  rsi.rs  sma.rs  stochastic.rs
src/services/: alerts.rs  indicators.rs  market_data.rs  mod.rs  priority_scheduler.rs  scheduler.rs  stock_list.rs
src/utils/: auth.rs  errors.rs  mod.rs
static/: index.html
tests/: analyzer_tests.rs  database_tests.rs
